fixed home page WAVE error: low contrast on nav bar

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -287,7 +287,7 @@
   /*----------Dark Mode ----------*/
   
   .dark p{
-    color:rgb(255, 255, 255);;
+    color:rgb(255, 255, 255);
   }
 
   
